# niskine

./: .gitignore  README.md  config.yml  environment.yml  pyproject.toml
data/: niskine_mooring_locations.nc
niskine/: __init__.py  calcs.py  clim.py  flux.py  io.py  mooring.py  osnap.py  strat.py
notebooks/: .gitignore  argo_float_data.py  argo_n2_for_m1_gridded.py  compare_wind_work_and_ni_eke.py  depth-integrate-ni_eke.py  mooring_distance.py  ni-filtering.py  ni-ke-by-vorticity.py  overview_map_with_eke.py  plot_surface_time_series.py  plot_surface_time_series_v3.py  plot_surface_time_series_v4.py  plot_surface_time_series_v5.py  stratification.py  velocity_frequency_spectra.py
notebooks/adcp-investigate/: adcp_daytime_gaps.py
notebooks/bathymetry/: bathymetry.py
notebooks/climatologies/: woce_argo_climatology_dev.py  woce_climatology_dev.py
notebooks/low-mode-fluxes/: higher_modes.py  low_mode_energy_budget.py  low_mode_ni_fluxes.py  low_mode_ni_fluxes_final.py  low_mode_ni_fluxes_final_save_nc.py  low_mode_ni_fluxes_first_few_weeks.py  low_mode_ni_fluxes_investigate_202307.py  ni_fluxes_dev.py  plot_mode_fit_examples.py
notebooks/mixed-layer/: argo_mld_climatology.py  density.py  mixed_layer_calcs.py  mixed_layer_calcs_dev.py
notebooks/osnap/: 00_osnap_read_and_save_netcdf.py  01_osnap_ocean_surface_velocity.py
notebooks/shipboard-ctd/: read_niskine_ctd.py
notebooks/ssh/: ssh_analysis.py
notebooks/sst/: process_sst.py
notebooks/thermistor-gridding/: compare_chipod_microcat_pressure.py  convert_gridded_thermistors_to_nc.py  downsample_thermistors.py  grid_thermistors.py  inspect_thermistors.py  save_2min_thermistor_time_series.py
notebooks/wind-work/: niskine_mode1_wind_work.py  niskine_wind_forcing.py  retrieve_era5_wind_data.py  retrieve_era5_wind_data_2018_2020.py
src/niskine/: __init__.py  calcs.py  clim.py  flux.py  mooring.py  osnap.py  strat.py
